# Kobe2D

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: Application.cpp
src/Buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Object/: Camera.cpp  Camera.h  Object.cpp  Object.h  Player.cpp  Player.h  Tile.cpp  Tile.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp
src/Texture/: Texture.cpp  Texture.h
src/Window/: Input.h  Window.cpp  Window.h
